--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+img{width: 100%}
+a{text-decoration: none; color: #ff4081}
+button{font-weight: bold; text-transform: uppercase}
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.container{
+    width: 95%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.mat-tab-body-wrapper{
+    padding: 1em;
+}
