--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,12 +24,12 @@ body{min-height: 100vh}
     margin: 0 auto;
 }
 
-.mat-tab-body-wrapper{
-    position: absolute !important;
-    top: 104px;
-    bottom: 0;
-    width: 100%; 
-}
+// .mat-tab-body-wrapper{
+//     position: absolute !important;
+//     top: 104px;
+//     bottom: 0;
+//     width: 100%; 
+// }
 
 .mat-tab-body{
     padding: 1em;
