--- a/client/src/app/profile/info/info.component.html
+++ b/client/src/app/profile/info/info.component.html
@@ -2,7 +2,7 @@
   <img src="http://www.personalbrandingblog.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640-300x300.png" alt="">
 </div>
 
-<h2 id="username">{{user.username}}</h2>
+<h2>{{user.username}}</h2>
 
 <p id="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem deserunt enim et veritatis quae dolor, quo, in officia aliquid
   qui dicta atque odit. Incidunt unde voluptatum voluptates, vel pariatur consequuntur.</p>
