--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="auth.user">
-  <app-navbar></app-navbar>
+  <app-navbar [title]="'Home'"></app-navbar>
 
   <mat-tab-group 
         [color]="'primary'" [backgroundColor]="'primary'" 
