--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <h1>My Profile</h1>
+    <h1>{{title}}</h1>
     <span class="example-spacer"></span>
 
     <mat-menu #moreMenu="matMenu" yPosition="above">
