--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -34,3 +34,9 @@ body{min-height: 100vh}
 .mat-tab-body{
     padding: 1em;
 }
+
+mat-tab-header {
+    position: sticky !important;
+    top: 0;
+    z-index: 999;
+}
