--- a/client/src/app/profile/game-list/game-list.component.html
+++ b/client/src/app/profile/game-list/game-list.component.html
@@ -1,9 +1,9 @@
 <h2>{{type}} Games</h2>
 
-<mat-list>
-  <mat-list-item *ngFor="let game of games">
+<mat-nav-list>
+  <mat-list-item *ngFor="let game of games" [routerLink]="['/game', 'info', game._id]">
     <mat-icon mat-list-icon>videogame_asset</mat-icon>
     <h4 mat-line>{{game.title}}</h4>
     <p mat-line> {{game.date | date}} </p>
   </mat-list-item>
-</mat-list>
+</mat-nav-list>
