--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -11,6 +11,8 @@
     line-height: 1.5;
 }
 
+html{background: rgba(0,0,0,.03);}
+
 img{width: 100%}
 a{text-decoration: none; color: #ff4081}
 button{font-weight: bold; text-transform: uppercase}
