Removed map support with script tag

--- a/client/src/app/profile/edit-profile/edit-profile.component.scss
+++ b/client/src/app/profile/edit-profile/edit-profile.component.scss
@@ -11,3 +11,30 @@ form{
 .full-width{
     width: 100%
 }
+
+.upload-btn-wrapper {
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    width: 100%;
+  }
+  
+  .btn {
+    border: 2px solid gray;
+    color: gray;
+    background-color: white;
+    padding: 8px 10px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    display: block;
+    margin: 1em auto;
+  }
+  
+  .upload-btn-wrapper input[type=file] {
+    font-size: 100px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+  }
