--- a/client/src/app/profile/edit-profile/edit-profile.component.html
+++ b/client/src/app/profile/edit-profile/edit-profile.component.html
@@ -7,7 +7,10 @@
     </mat-expansion-panel-header>
 
     <form (ngSubmit)="editInfo(infoForm)" #infoForm="ngForm">
-      <input name="profilePic" [(ngModel)]="profilePic" type="file">
+        <div class="upload-btn-wrapper">
+          <button class="btn">Upload Profile Photo</button>
+          <input type="file" name="profilePic" [(ngModel)]="profilePic" />
+        </div>
 
       <mat-form-field class="full-width">
         <input matInput placeholder="Username" name="username" [(ngModel)]="username" disabled>
