--- a/client/src/app/game/game-list/game-list.component.html
+++ b/client/src/app/game/game-list/game-list.component.html
@@ -1,4 +1,4 @@
-<h2>{{type}} Games</h2>
+<h2>{{type}} Khanas</h2>
 
 <mat-nav-list>
   <mat-list-item *ngFor="let game of games" [routerLink]="['/game', 'info', game._id]">
