--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -5,8 +5,8 @@
 
     <mat-menu #moreMenu="matMenu" yPosition="above">
       <button mat-menu-item>Home</button>
+      <button mat-menu-item [routerLink]="['/khanas']">Khanas</button>
       <button mat-menu-item [routerLink]="['/profile']">Profile</button>
-      <button mat-menu-item>Games</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
 
