--- a/client/src/app/game/game-info/game-info.component.html
+++ b/client/src/app/game/game-info/game-info.component.html
@@ -28,7 +28,7 @@
         <mat-list>
           <mat-list-item *ngFor="let challenge of game.challenges">
             <mat-icon mat-list-icon>casino</mat-icon>
-            <h4 mat-line>{{challenge.title}}</h4>
+            <h4 mat-line>{{challenge.category}}</h4>
           </mat-list-item>
         </mat-list>
 
