--- a/client/src/app/game/create-game/create-game.component.scss
+++ b/client/src/app/game/create-game/create-game.component.scss
@@ -11,6 +11,7 @@ h2{
     margin: 1em 0;
 
     input{
+        background-color: transparent;
         padding: 5px 10px;
         outline: none;
         border-bottom: 1.5px solid rgba($color: #000000, $alpha: 0.3);
