Real Time Position Socket.IO

--- a/client/src/app/gameboard/gameboard.component.html
+++ b/client/src/app/gameboard/gameboard.component.html
@@ -7,7 +7,7 @@
       Map
     </ng-template>
     
-    <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" [mapHeight]="innerHeight"></app-gamearea-viewer>
+    <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" [mapHeight]="mapHeight"></app-gamearea-viewer>
   </mat-tab>
 
   <mat-tab>
