Stable with user radius area

--- a/client/src/app/gameboard/gameboard.component.html
+++ b/client/src/app/gameboard/gameboard.component.html
@@ -7,7 +7,7 @@
       Map
     </ng-template>
     
-    <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" [mapHeight]="mapHeight" [challenges]="challenges"></app-gamearea-viewer>
+    <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" [mapHeight]="mapHeight" [challenges]="challenges" [mapZoom]="19"></app-gamearea-viewer>
   </mat-tab>
 
   <mat-tab>
