--- a/client/src/app/maps/gamearea-viewer/gamearea-viewer.component.html
+++ b/client/src/app/maps/gamearea-viewer/gamearea-viewer.component.html
@@ -6,7 +6,7 @@
   <agm-marker *ngFor="let c of challenges" [latitude]="c.position.coordinates[1]" [longitude]="c.position.coordinates[0]" [iconUrl]="{url: 'https://image.flaticon.com/icons/png/512/32/32698.png', scaledSize: {height: 30, width: 30}}" [zIndex]="10">
     <agm-info-window>
       <h2 class="challengeTitle">{{c.challenge.category}}</h2>
-      <button mat-stroked-button color="accent" *ngIf="c.active">Try Challenge</button>
+      <button mat-stroked-button color="accent" *ngIf="c.active" (click)="openChallenge(c.challenge._id)">Try Challenge</button>
       <p *ngIf="!c.active">You need to get closer.</p>
     </agm-info-window>
   </agm-marker>  
