--- a/client/src/app/maps/gamearea-viewer/gamearea-viewer.component.html
+++ b/client/src/app/maps/gamearea-viewer/gamearea-viewer.component.html
@@ -1,5 +1,5 @@
 <agm-map [latitude]="middle.lat" [longitude]="middle.lng" [style.height]="mapHeight"
-    [streetViewControl]="false" [zoom]="mapZoom">
+    [streetViewControl]="false" [zoom]="mapZoom" [gestureHandling]="'greedy'" [fullscreenControl]="true">
 
   <agm-polygon [paths]="coordinates" [strokeWeight]="3"></agm-polygon>
 
