--- a/client/src/app/profile/info/info.component.scss
+++ b/client/src/app/profile/info/info.component.scss
@@ -10,9 +10,15 @@ h2{
 }
 
 .img-container{
-    max-width: 200px;
     width: 100%;
     margin: 1em auto;
+    text-align: center;
 
-    img{border-radius: 50%}
+    img{
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        object-position: top;
+        border-radius: 50%
+    }
 }
