--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -4,8 +4,8 @@
     <span class="example-spacer"></span>
 
     <mat-menu #moreMenu="matMenu" yPosition="above">
-      <button mat-menu-item>Home</button>
-      <button mat-menu-item [routerLink]="['/khanas']">Khanas</button>
+      <!-- <button mat-menu-item>Home</button> -->
+      <button mat-menu-item [routerLink]="['/khanas']">Find Khanas</button>
       <button mat-menu-item [routerLink]="['/profile']">Profile</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
