--- a/client/src/app/gameboard/gameboard.component.html
+++ b/client/src/app/gameboard/gameboard.component.html
@@ -15,6 +15,7 @@
       <mat-icon class="tab-icon">chat</mat-icon>
       Chat
     </ng-template>
-    <h2>Hello</h2>
+    
+    <app-chat [room]="game.title"></app-chat>
   </mat-tab>
 </mat-tab-group>
