Add challenges in game info

--- a/client/src/app/game-components/game-info/game-info.component.html
+++ b/client/src/app/game-components/game-info/game-info.component.html
@@ -39,7 +39,7 @@
           <mat-panel-title>Game Area</mat-panel-title>
         </mat-expansion-panel-header>
 
-        <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" id="gameArea"></app-gamearea-viewer>
+        <app-gamearea-viewer [gameAreaCoords]="game.gameArea.coordinates" [middlePoint]="game.middlePos.coordinates" [challenges]="game.challenges" id="gameArea"></app-gamearea-viewer>
 
       </mat-expansion-panel>
     </mat-accordion>
