--- a/client/src/app/auth/auth.component.html
+++ b/client/src/app/auth/auth.component.html
@@ -6,18 +6,19 @@
 
     <form (ngSubmit)="onSubmit(authForm)" #authForm="ngForm">
       <mat-form-field>
-        <input matInput placeholder="Username" [(ngModel)]="newUser.username" name="username" autocomplete="off">
+        <input matInput placeholder="Username" [(ngModel)]="newUser.username" name="username" autocomplete="off" required>
       </mat-form-field>
 
       <mat-form-field *ngIf="operation == 'signup'">
-        <input matInput placeholder="Email" [(ngModel)]="newUser.email" name="email">
+        <input matInput placeholder="Email" [(ngModel)]="newUser.email" name="email" required>
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Password" [(ngModel)]="newUser.password" name="password" type="password">
+        <input matInput placeholder="Password" [(ngModel)]="newUser.password" name="password" type="password" required>
       </mat-form-field>
 
       <span>{{message}} have an account? <a href="#" (click)="changeForm($event)">{{inverseOperation}}</a></span> <br><br>
+      <p class="error" *ngIf="errorMessage">{{errorMessage}}</p>
       <button mat-flat-button color="accent">{{operation}}</button>
     </form>
   </mat-card>
