--- a/client/src/app/game-components/create-game/create-game.component.html
+++ b/client/src/app/game-components/create-game/create-game.component.html
@@ -48,7 +48,7 @@
   </mat-form-field>
 
   <mat-form-field class="full-width">
-    <input matInput placeholder="Number of Challenges" name="numberOfChallenges" [(ngModel)]="newGame.numberOfChallenges" required>
+    <input matInput placeholder="Number of Challenges" name="numberOfChallenges" [(ngModel)]="newGame.numberOfChallenges" required autocomplete="off">
   </mat-form-field>
 
   <p id="time">Choose a date
