Fixed google maps doesn't appear

--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -21,6 +21,6 @@
   </mat-tab-group>
 
   <button id="fab" *ngIf="fabIcon" (click)="changeComponent()">
-    <mat-icon (click)="changeComponent()">{{fabIcon}}</mat-icon>
+    <mat-icon>{{fabIcon}}</mat-icon>
   </button>
 </div>
